@@ -57,11 +57,11 @@
     <Compile Include="Data\IFileFeatureSource.cs" />
     <Compile Include="Data\IDatabaseFeatureSource.cs" />
     <Compile Include="Data\Shapefile\DBaseIIIFile.cs" />
-    <Compile Include="MapConfigurationException.cs" />
     <Compile Include="Style.cs" />
     <Compile Include="Data\FeatureType.cs" />
     <Compile Include="Web\TileProvider.cs" />
     <Compile Include="Data\WellKnownText.cs" />
+    <Compile Include="Drawing\MapConfigurationException.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
